tests/Fixtures/Torture/Bad/cast_to_void.g
// EXPECT G028
kernel { entry func Main() { let int x = 5; let y = x as void; } }
